Add: New images and Fix: stylesPage

--- a/diseno.html
+++ b/diseno.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Propósito - Aguita Chida</title>
-    <meta name="description" content="Conoce el propósito de Aguita Chida: transformar la relación de los estudiantes con el agua, promoviendo hábitos saludables y sustentables.">
+    <title>Diseño - Aguita Chida</title>
+    <meta name="description" content="Conoce el diseño de nuestros bebederos innovadores, funcionales y atractivos que transforman la experiencia de hidratación en las escuelas.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,8 +25,8 @@
 
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
-                    <a href="proposito.html" class="nav-link active">Propósito</a>
-                    <a href="diseno.html" class="nav-link">Diseño</a>
+                    <a href="proposito.html" class="nav-link">Propósito</a>
+                    <a href="diseno.html" class="nav-link active">Diseño</a>
                     <a href="marca.html" class="nav-link">Nosotros</a>
                     <a href="estrategias.html" class="nav-link">EStrategias</a>
                 </div>
@@ -52,8 +52,8 @@
         <div class="mobile-menu hidden" id="mobile-menu">
             <div class="container">
                 <div class="mobile-menu-links">
-                    <a href="proposito.html" class="mobile-nav-link active">Propósito</a>
-                    <a href="diseno.html" class="mobile-nav-link">Diseño</a>
+                    <a href="proposito.html" class="mobile-nav-link">Propósito</a>
+                    <a href="diseno.html" class="mobile-nav-link active">Diseño</a>
                     <a href="marca.html" class="mobile-nav-link">La Marca</a>
                     <a href="estrategias.html" class="mobile-nav-link">EStrategias</a>
                 </div>
@@ -63,156 +63,168 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="page-hero bg-dark-blue">
+        <section class="page-hero bg-green">
             <div class="container">
-                <h1>Nuestro Propósito</h1>
+                <h1>Nuestro Diseño</h1>
                 <p>
-                    Transformar la relación de los estudiantes con el agua, promoviendo hábitos saludables y sustentables.
+                    Bebederos innovadores, funcionales y atractivos que transforman la experiencia de hidratación en las
+                    escuelas.
                 </p>
             </div>
         </section>
 
-        <!-- Misión y Visión -->
-        <section class="mission-vision">
+        <!-- Características de Diseño -->
+        <section class="design-features">
             <div class="container">
-                <div class="mission-vision-grid">
-                    <div class="mission-card bg-light-blue">
-                        <h2>Nuestra Misión</h2>
-                        <p>
-                            Reducir el consumo de botellas plásticas en escuelas mediante la instalación de bebederos de agua de
-                            alta calidad, fomentando hábitos saludables y contribuyendo a la preservación del medio ambiente.
-                        </p>
-                        <ul class="check-list">
-                            <li><span class="check-icon turquoise">✓</span> Promover el consumo de agua entre estudiantes</li>
-                            <li><span class="check-icon turquoise">✓</span> Reducir la huella ecológica de las instituciones educativas</li>
-                            <li><span class="check-icon turquoise">✓</span> Crear conciencia sobre el impacto ambiental del plástico</li>
-                        </ul>
+                <h2>Características de Nuestros Bebederos</h2>
+
+                <div class="design-grid">
+                    <div class="design-image">
+                        <img src="img/bebedero.png" alt="Bebedero Aguita Chida">
                     </div>
 
-                    <div class="vision-card bg-yellow">
-                        <h2>Nuestra Visión</h2>
-                        <p>
-                            Ser líderes en la transformación de las escuelas hacia entornos más sostenibles, donde cada estudiante
-                            tenga acceso a agua limpia y segura, eliminando por completo la necesidad de botellas plásticas
-                            desechables.
-                        </p>
-                        <ul class="check-list">
-                            <li><span class="check-icon green">✓</span> Escuelas 100% libres de botellas plásticas desechables</li>
-                            <li><span class="check-icon green">✓</span> Estudiantes conscientes del valor del agua y su conservación</li>
-                            <li><span class="check-icon green">✓</span> Comunidades educativas comprometidas con el medio ambiente</li>
-                        </ul>
+                    <div class="design-features-list">
+                        <div class="feature-card bg-light-blue">
+                            <h3>Diseño Ergonómico</h3>
+                            <p>
+                                Adaptados a diferentes alturas para que todos los estudiantes puedan acceder cómodamente, desde los
+                                más pequeños hasta los más altos.
+                            </p>
+                        </div>
+
+                        <div class="feature-card bg-yellow">
+                            <h3>Filtración Avanzada</h3>
+                            <p>
+                                Sistema de filtración de múltiples etapas que elimina impurezas, cloro y bacterias, garantizando
+                                agua limpia y de excelente sabor.
+                            </p>
+                        </div>
+
+                        <div class="feature-card bg-coral">
+                            <h3>Refrigeración Eficiente</h3>
+                            <p>
+                                Tecnología de enfriamiento que mantiene el agua a una temperatura ideal para su consumo, incluso en
+                                los días más calurosos.
+                            </p>
+                        </div>
+
+                        <div class="feature-card bg-green text-white">
+                            <h3>Durabilidad y Resistencia</h3>
+                            <p>
+                                Fabricados con materiales de alta calidad, resistentes al uso intensivo en entornos escolares y de
+                                fácil mantenimiento.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Valores -->
-        <section class="values bg-turquoise">
+        <!-- Innovaciones -->
+        <section class="innovations bg-dark-blue">
             <div class="container">
-                <h2>Nuestros Valores</h2>
+                <h2>Innovaciones Exclusivas</h2>
 
-                <div class="values-grid">
-                    <div class="value-card">
-                        <div class="value-icon bg-green">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M7 11.5V14m0-2.5v-6a1.5 1.5 0 113 0m-3 6a1.5 1.5 0 00-3 0v2a7.5 7.5 0 0015 0v-5a1.5 1.5 0 00-3 0m-6-3V11m0-5.5v-1a1.5 1.5 0 013 0v1m0 0V11m0-5.5a1.5 1.5 0 013 0v3m0 0V11"></path>
-                            </svg>
-                        </div>
-                        <h3>Sostenibilidad</h3>
-                        <p>
-                            Todas nuestras acciones están orientadas a crear un futuro más sostenible para las próximas
-                            generaciones.
-                        </p>
-                    </div>
-
-                    <div class="value-card">
-                        <div class="value-icon bg-dark-blue">
+                <div class="innovations-grid">
+                    <div class="innovation-card">
+                        <div class="innovation-icon bg-turquoise">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
                             </svg>
                         </div>
-                        <h3>Calidad</h3>
+                        <h3>Sistema Anti-bacteriano</h3>
                         <p>
-                            Nos comprometemos a ofrecer agua de la más alta calidad, segura y saludable para todos los
-                            estudiantes.
+                            Superficies tratadas con tecnología antibacteriana que previene la proliferación de gérmenes y
+                            mantiene el bebedero higiénico.
                         </p>
                     </div>
 
-                    <div class="value-card">
-                        <div class="value-icon bg-orange">
+                    <div class="innovation-card">
+                        <div class="innovation-icon bg-green">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                                <path d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                             </svg>
                         </div>
-                        <h3>Educación</h3>
+                        <h3>Bajo Consumo Energético</h3>
                         <p>
-                            Creemos en el poder de la educación para transformar hábitos y crear conciencia ambiental.
+                            Diseñados para optimizar el consumo de energía, reduciendo costos operativos y minimizando el impacto
+                            ambiental.
                         </p>
                     </div>
 
-                    <div class="value-card">
-                        <div class="value-icon bg-turquoise">
+                    <div class="innovation-card">
+                        <div class="innovation-icon bg-orange">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
+                                <path d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
                             </svg>
                         </div>
-                        <h3>Comunidad</h3>
+                        <h3>Monitoreo Inteligente</h3>
                         <p>
-                            Trabajamos en colaboración con escuelas, estudiantes y familias para crear un impacto positivo y
-                            duradero.
+                            Sistema de seguimiento que registra el consumo de agua y el estado de los filtros, facilitando el
+                            mantenimiento preventivo.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Objetivos -->
-        <section class="objectives">
+        <!-- Galería de Modelos -->
+        <section class="models">
             <div class="container">
-                <h2>Nuestros Objetivos</h2>
+                <h2>Nuestros Modelos</h2>
 
-                <div class="objectives-list">
-                    <div class="objective">
-                        <div class="objective-number bg-green">1</div>
-                        <div class="objective-content">
-                            <h3>Reducir el consumo de plástico</h3>
+                <div class="models-grid">
+                    <div class="model-card bg-yellow">
+                        <div class="model-image">
+                            <img src="img/placeholder.svg" alt="Modelo Básico">
+                        </div>
+                        <div class="model-content">
+                            <h3>Modelo Básico</h3>
                             <p>
-                                Disminuir en un 90% el uso de botellas plásticas desechables en las escuelas donde implementamos
-                                nuestros bebederos.
+                                Ideal para escuelas primarias, con altura ajustable y sistema de filtración estándar.
                             </p>
+                            <ul class="model-features">
+                                <li><span class="check-icon green">✓</span> Capacidad: 100 estudiantes</li>
+                                <li><span class="check-icon green">✓</span> Filtración de 2 etapas</li>
+                                <li><span class="check-icon green">✓</span> Refrigeración básica</li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div class="objective">
-                        <div class="objective-number bg-turquoise">2</div>
-                        <div class="objective-content">
-                            <h3>Fomentar hábitos saludables</h3>
+                    <div class="model-card bg-light-blue">
+                        <div class="model-image">
+                            <img src="img/placeholder.svg" alt="Modelo Avanzado">
+                        </div>
+                        <div class="model-content">
+                            <h3>Modelo Avanzado</h3>
                             <p>
-                                Incrementar el consumo de agua entre los estudiantes, promoviendo una hidratación adecuada y
-                                reduciendo el consumo de bebidas azucaradas.
+                                Perfecto para escuelas secundarias, con mayor capacidad y filtración avanzada.
                             </p>
+                            <ul class="model-features">
+                                <li><span class="check-icon turquoise">✓</span> Capacidad: 250 estudiantes</li>
+                                <li><span class="check-icon turquoise">✓</span> Filtración de 4 etapas</li>
+                                <li><span class="check-icon turquoise">✓</span> Refrigeración avanzada</li>
+                                <li><span class="check-icon turquoise">✓</span> Monitoreo básico</li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div class="objective">
-                        <div class="objective-number bg-orange">3</div>
-                        <div class="objective-content">
-                            <h3>Educar sobre el medio ambiente</h3>
-                            <p>
-                                Implementar programas educativos que concienticen sobre la importancia del agua y el impacto
-                                negativo del plástico en nuestro planeta.
-                            </p>
+                    <div class="model-card bg-coral">
+                        <div class="model-image">
+                            <img src="img/placeholder.svg" alt="Modelo Premium">
                         </div>
-                    </div>
-
-                    <div class="objective">
-                        <div class="objective-number bg-dark-blue">4</div>
-                        <div class="objective-content">
-                            <h3>Expandir nuestro alcance</h3>
+                        <div class="model-content">
+                            <h3>Modelo Premium</h3>
                             <p>
-                                Llegar a más de 200 escuelas en los próximos 3 años, beneficiando a más de 100,000 estudiantes en
-                                todo México.
+                                Diseñado para instituciones grandes, con todas las características avanzadas.
                             </p>
+                            <ul class="model-features">
+                                <li><span class="check-icon orange">✓</span> Capacidad: 500+ estudiantes</li>
+                                <li><span class="check-icon orange">✓</span> Filtración de 6 etapas</li>
+                                <li><span class="check-icon orange">✓</span> Refrigeración premium</li>
+                                <li><span class="check-icon orange">✓</span> Monitoreo inteligente completo</li>
+                                <li><span class="check-icon orange">✓</span> Sistema anti-bacteriano avanzado</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -228,7 +240,7 @@
                 <div class="footer-info">
                     <a href="index.html" class="footer-logo">
                         <div class="logo-image">
-                            <img src="img/logoBN.png" alt="Aguita Chida Logo">
+                            <img src="img/placeholder.svg" alt="Aguita Chida Logo">
                         </div>
                     </a>
                     <p class="address">
