--- a/estrategias.html
+++ b/estrategias.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estrategias de Implementación - Aguita Chida</title>
-    <meta name="description" content="Conoce nuestras estrategias de implementación: un enfoque integral para transformar la cultura del agua en las escuelas.">
+    <title>EStrategias - Aguita Chida</title>
+    <meta name="description" content="Conoce nuestras EStrategias: un enfoque integral para transformar la cultura del agua en las escuelas.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -19,17 +19,16 @@
                 <!-- Logo -->
                 <a href="index.html" class="navbar-logo">
                     <div class="logo-image">
-                        <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                        <img src="img/logo-AguitaChida.png" alt="Aguita Chida Logo">
                     </div>
-                    <span class="logo-text">Aguita Chida</span>
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
-                    <a href="marca.html" class="nav-link">La Marca</a>
-                    <a href="estrategias.html" class="nav-link active">Estrategias de Implementación</a>
+                    <a href="marca.html" class="nav-link">Nosotros</a>
+                    <a href="estrategias.html" class="nav-link active">EStrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -56,7 +55,7 @@
                     <a href="proposito.html" class="mobile-nav-link">Propósito</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
                     <a href="marca.html" class="mobile-nav-link">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link active">Estrategias de Implementación</a>
+                    <a href="estrategias.html" class="mobile-nav-link active">EStrategias</a>
                 </div>
             </div>
         </div>
@@ -320,9 +319,8 @@
                 <div class="footer-info">
                     <a href="index.html" class="footer-logo">
                         <div class="logo-image">
-                            <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                            <img src="img/logoBN.png" alt="Aguita Chida Logo">
                         </div>
-                        <span class="logo-text">Aguita Chida</span>
                     </a>
                     <p class="address">
                         Av. Montes Pirineos 770, Lomas de Chapultepec. Miguel Hidalgo, CDMX
