--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
                 <!-- Logo -->
                 <a href="index.html" class="navbar-logo">
                     <div class="logo-image">
-                        <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                        <img src="img/logo-AguitaChida.png" alt="Aguita Chida Logo">
                     </div>
-                    <span class="logo-text">Aguita Chida</span>
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
-                    <a href="marca.html" class="nav-link">La Marca</a>
-                    <a href="estrategias.html" class="nav-link">Estrategias de Implementación</a>
+                    <a href="marca.html" class="nav-link">Nosotros</a>
+                    <a href="estrategias.html" class="nav-link">EStrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -56,7 +55,7 @@
                     <a href="proposito.html" class="mobile-nav-link">Propósito</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
                     <a href="marca.html" class="mobile-nav-link">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link">Estrategias de Implementación</a>
+                    <a href="estrategias.html" class="mobile-nav-link">EStrategias</a>
                 </div>
             </div>
         </div>
@@ -77,7 +76,7 @@
                     </div>
                     <div class="hero-image">
                         <div class="image-container">
-                            <img src="img/placeholder.svg" alt="Bebedero Aguita Chida">
+                            <img src="img/gotin.png" alt="Bebedero Aguita Chida">
                         </div>
                     </div>
                 </div>
@@ -176,7 +175,63 @@
                         </div>
                     </div>
 
-                    <div class="testimonial-card bg-light-blue">
+                    <div class="testimonial-card bg-yellow">
+                        <p class="testimonial-text">
+                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
+                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                        </p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar bg-turquoise"></div>
+                            <div class="author-info">
+                                <h4>Carlos Mendoza</h4>
+                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card bg-yellow">
+                        <p class="testimonial-text">
+                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
+                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                        </p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar bg-turquoise"></div>
+                            <div class="author-info">
+                                <h4>Carlos Mendoza</h4>
+                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card bg-yellow">
+                        <p class="testimonial-text">
+                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
+                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                        </p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar bg-turquoise"></div>
+                            <div class="author-info">
+                                <h4>Carlos Mendoza</h4>
+                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card bg-yellow">
+                        <p class="testimonial-text">
+                            "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
+                            conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
+                        </p>
+                        <div class="testimonial-author">
+                            <div class="author-avatar bg-turquoise"></div>
+                            <div class="author-info">
+                                <h4>Carlos Mendoza</h4>
+                                <p>Profesor de Ciencias, Colegio Azteca</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card bg-yellow">
                         <p class="testimonial-text">
                             "Los bebederos no solo han ayudado a reducir nuestra huella ecológica, sino que también han creado
                             conciencia ambiental entre nuestros alumnos. Un proyecto con impacto real."
@@ -202,7 +257,6 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="estrategias.html" class="btn btn-secondary">Conoce nuestras estrategias</a>
-                    <a href="#" class="btn btn-white">Contáctanos</a>
                 </div>
             </div>
         </section>
@@ -216,7 +270,7 @@
                 <div class="footer-info">
                     <a href="index.html" class="footer-logo">
                         <div class="logo-image">
-                            <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                            <img src="img/logoBN.png" alt="Aguita Chida Logo">
                         </div>
                         <span class="logo-text">Aguita Chida</span>
                     </a>
