--- a/marca.html
+++ b/marca.html
@@ -19,17 +19,16 @@
                 <!-- Logo -->
                 <a href="index.html" class="navbar-logo">
                     <div class="logo-image">
-                        <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                        <img src="img/logo-AguitaChida.png" alt="Aguita Chida Logo">
                     </div>
-                    <span class="logo-text">Aguita Chida</span>
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="navbar-links">
                     <a href="proposito.html" class="nav-link">Propósito</a>
                     <a href="diseno.html" class="nav-link">Diseño</a>
-                    <a href="marca.html" class="nav-link active">La Marca</a>
-                    <a href="estrategias.html" class="nav-link">Estrategias de Implementación</a>
+                    <a href="marca.html" class="nav-link active">Nosotros</a>
+                    <a href="estrategias.html" class="nav-link">EStrategias</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -56,7 +55,7 @@
                     <a href="proposito.html" class="mobile-nav-link">Propósito</a>
                     <a href="diseno.html" class="mobile-nav-link">Diseño</a>
                     <a href="marca.html" class="mobile-nav-link active">La Marca</a>
-                    <a href="estrategias.html" class="mobile-nav-link">Estrategias de Implementación</a>
+                    <a href="estrategias.html" class="mobile-nav-link">EStrategias</a>
                 </div>
             </div>
         </div>
@@ -264,9 +263,8 @@
                 <div class="footer-info">
                     <a href="index.html" class="footer-logo">
                         <div class="logo-image">
-                            <img src="img/placeholder.svg" alt="Aguita Chida Logo">
+                            <img src="img/logoBN.png" alt="Aguita Chida Logo">
                         </div>
-                        <span class="logo-text">Aguita Chida</span>
                     </a>
                     <p class="address">
                         Av. Montes Pirineos 770, Lomas de Chapultepec. Miguel Hidalgo, CDMX
