Add: Graphic identity PDF 📑, Fix: Styles 🎨

--- a/estrategias.html
+++ b/estrategias.html
@@ -120,7 +120,7 @@
 
                     <div class="timeline-item left">
                         <div class="timeline-marker bg-turquoise">5</div>
-                        <div class="timeline-content bg-dark-blue text-white">
+                        <div class="timeline-content bg-orange text-white">
                             <h3>Seguimiento y Medición</h3>
                             <p>
                                 Monitoreamos el impacto de la implementación, midiendo la reducción en el consumo de botellas plásticas y el aumento en el consumo de agua.
