--- a/marca.html
+++ b/marca.html
@@ -96,8 +96,8 @@
                     </div>
 
                     <div class="history-image">
-                        <div class="image-container">
-                            <img src="img/placeholder.svg" alt="Historia de Aguita Chida">
+                        <div class="image-containerx">
+                            <img src="img/img1.png" alt="Historia de Aguita Chida">
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
 
                 <div class="identity-grid">
                     <div class="identity-card">
-                        <h3 class="text-turquoise">Significado del Nombre</h3>
+                        <h3 class="text-dark-blue">Significado del Nombre</h3>
                         <p>
                             "Aguita Chida" combina la palabra diminutiva cariñosa "aguita" con el término coloquial mexicano
                             "chida", que significa genial o cool.
@@ -126,15 +126,46 @@
                     <div class="identity-card">
                         <h3 class="text-green">Nuestro Logo</h3>
                         <p>
-                            El logo de Aguita Chida representa una gota de agua fresca y dinámica, simbolizando pureza y
-                            vitalidad.
+                            El logo de <strong>“Agüita Chida”</strong> transmite una imagen moderna, amigable y ecológica, alineada con el objetivo de la marca: promover el consumo responsable del agua y fomentar el uso de botellas reutilizables.
                         </p>
                         <p>
-                            Los colores turquesa y verde reflejan nuestro compromiso con el medio ambiente y la frescura del agua,
-                            mientras que el diseño moderno y amigable conecta con nuestro público joven.
+                            <strong>"AGÜITA”</strong> en azul: El color azul refuerza la relación directa con el agua, simbolizando limpieza, frescura y confianza.
+                        </p>
+                        <p>
+                            <strong>“CHIDA”</strong> en verde: El verde es el color de la naturaleza y la sostenibilidad. Representa el enfoque ecológico de la marca y su compromiso con el medio ambiente.
+                        </p>
+                        <!--<div class="logo-showcase">
+                            <img src="img/placeholder.svg" alt="Logo de Aguita Chida">
+                        </div>-->
+                    </div>
+
+                    <div class="identity-card">
+                        <h3 class="text-turquoise">¿Quién es Gotin?</h3>
+                        <p>
+                            <strong>Gotin</strong> no solo es un ícono visual, sino también una herramienta educativa que invita al público a reflexionar sobre la importancia del agua, su uso responsable y su preservación. <br> 
+                            <br>Es una figura representativa en campañas, talleres, materiales gráficos y digitales, ayudando a crear una marca cercana, responsable y comprometida con el medio ambiente.
                         </p>
                         <div class="logo-showcase">
-                            <img src="img/placeholder.svg" alt="Logo de Aguita Chida">
+                            <img src="img/img2.png" alt="Gotin">
+                        </div>
+                    </div>
+
+                    <div class="identity-card">
+                        <h3 class="text-orange">Elementos visuales</h3>
+                        <p>
+                            <strong>Forma de gota de agua:</strong> Representa la esencia del recurso natural que la marca busca proteger. Refuerza visualmente el mensaje de conciencia ambiental.
+                        </p>
+                        <p>
+                            <strong>Hojas en la cabeza:</strong> Representan sostenibilidad, naturaleza y el ciclo del agua. Refuerzan el enfoque ecológico de la marca.
+                        </p>
+                        <p>
+                           <strong> Mochila y gorra “Agüita Chida”:</strong> Indican que la mascota está en movimiento, aprendiendo y enseñando. La gorra y botella con el logo refuerzan la identidad de marca.
+                        </p>
+                        <p>
+                            <strong>Botella reutilizable: </strong>Promueve la acción consciente de evitar plásticos de un solo uso y fomenta hábitos sostenibles en el consumo de agua.
+                        </p>
+                        <div class="logo-showcase">
+                            <img src="img/visual-elements.png" alt="Gotin">
                         </div>
                     </div>
                 </div>
@@ -246,10 +277,12 @@
 
                     <div class="typography-description">
                         <p>
-                            Fredoka es una tipografía amigable y moderna que refleja nuestra personalidad de marca: accesible,
-                            divertida y profesional al mismo tiempo.
+                            Fredoka es una tipografía amigable y moderna que comunica cercanía, accesibilidad y un tono divertido, sin perder seriedad. Está pensada para ser legible y recordable.
                         </p>
                     </div>
+                </div><br><br>
+                <div class="cta-buttons">
+                    <a href="img/identidadGrafica-AguitaChida.pdf" target="_blank" class="btn btn-primary">Descarga la Guía gráfica</a>
                 </div>
             </div>
         </section>
